RESOLVED FIXED288679
REGRESSION(291165@main): Broke the GTK and WPE builds
https://bugs.webkit.org/show_bug.cgi?id=288679
Summary REGRESSION(291165@main): Broke the GTK and WPE builds
Jonathan Bedard
Reported 2025-02-26 20:19:31 PST
First build failure: https://build.webkit.org/#/builders/43/builds/62201 /app/webkit/Source/WebKit/UIProcess/API/glib/WebKitUserContent.cpp:232:67: error: ‘WaitForNotificationBeforeInjecting’ is not a member of ‘WebCore’ /app/webkit/Source/WebKit/UIProcess/API/glib/WebKitUserContent.cpp:232:67: error: no matching function for call to ‘WebCore::UserScript::UserScript(<brace-enclosed initializer list>)’ /app/webkit/Source/WebKit/UIProcess/API/glib/WebKitUserContent.cpp:228:62: error: expected primary-expression before ‘{’ token
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-26 20:19:52 PST
Alex Christensen
Comment 2 2025-02-26 23:11:05 PST
EWS
Comment 3 2025-02-26 23:13:33 PST
Committed 291206@main (bf50c25eb762): <https://commits.webkit.org/291206@main> Reviewed commits have been landed. Closing PR #41497 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.