REGRESSION(291165@main): Broke the GTK and WPE builds https://bugs.webkit.org/show_bug.cgi?id=288679

Unreviewed.

* Source/WebKit/UIProcess/API/glib/WebKitUserContent.cpp:
(_WebKitUserScript::_WebKitUserScript):

Canonical link: https://commits.webkit.org/291206@main